--- a/package.json
+++ b/package.json
@@ -1,27 +1,36 @@
 {
   "name": "tapyze-backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "nodemon index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/amirshapkota/tapyze-backend.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "description": "Modern Authentication Backend for TAPYZE Wallet with Real-time Support",
+  "main": "server.js",
   "type": "module",
-  "bugs": {
-    "url": "https://github.com/amirshapkota/tapyze-backend/issues"
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "homepage": "https://github.com/amirshapkota/tapyze-backend#readme",
   "dependencies": {
-    "express": "^5.1.0"
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.6.3",
+    "morgan": "^1.10.0",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
-  }
+    "nodemon": "^3.0.1"
+  },
+  "keywords": [
+    "tapyze",
+    "authentication",
+    "realtime",
+    "socket.io",
+    "digital-wallet",
+    "nodejs",
+    "express",
+    "mongodb"
+  ],
+  "author": "TAPYZE Team",
+  "license": "MIT"
 }
