--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.8.7",
     "morgan": "^1.10.0",
+    "nodemailer": "^7.0.3",
     "socket.io": "^4.7.2"
   },
   "devDependencies": {
